Disable most tests on pin buildslave. Add a separate buildslave for building and packing tsan+valgrind+pin.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1736 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -12,7 +12,8 @@ c['slaves'] = [BuildSlave('bot1name', 'bot1pazzwd'),
                BuildSlave('bot3name', 'bot3pazzwd'),
                BuildSlave('bot4name', 'bot4pazzwd'),
                BuildSlave('bot5name', 'bot5pazzwd'),
-               BuildSlave('bot6name', 'bot6pazzwd')]
+               BuildSlave('bot6name', 'bot6pazzwd'),
+               BuildSlave('bot7name', 'bot7pazzwd')]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave('bot1name', 'bot1passwd', max_builds=2)]
@@ -50,6 +51,7 @@ import builder_windows
 import builder_linux_pin
 import builder_mac
 import builder_experimental
+import builder_linux_build
 
 c['builders'] = []
 
@@ -58,7 +60,8 @@ for module in [builder_linux,
                builder_windows,
                builder_linux_pin,
                builder_mac,
-               builder_experimental]:
+               builder_experimental,
+               builder_linux_build]:
   reload(module)
   c['builders'].append(module.generate(settings))
 
@@ -66,13 +69,27 @@ for module in [builder_linux,
 ####### SCHEDULERS
 
 from buildbot.scheduler import Scheduler
+from buildbot.scheduler import Dependent
 
-builderNames = [b['name'] for b in c['builders']]
-c['schedulers'] = []
-c['schedulers'].append(Scheduler(name='all', branch=None,
-                                 treeStableTimer=10,
-                                 builderNames=builderNames))
+commonBuilderNames = ['buildbot-linux',
+                'buildbot-linux-small',
+                'buildbot-windows',
+                'buildbot-linux-pin',
+                'buildbot-mac']
 
+sched_common = Scheduler(name='common', branch=None,
+                         treeStableTimer=10,
+                         builderNames=commonBuilderNames)
+sched_build = Scheduler(name='build', branch=None,
+                        treeStableTimer=10,
+                        builderNames=['buildbot-linux-build'])
+sched_experimental = Dependent(name='experimental',
+                               upstream=sched_build,
+                               builderNames=['buildbot-experimental'])
+
+c['schedulers'] = [sched_common,
+                   sched_build,
+                   sched_experimental]
 
 ####### STATUS TARGETS
 
