Added the "make m" target for the unittests.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1738 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -34,6 +34,8 @@ all: $(BIN)racecheck_unittest-$(BUILD)$(EXE) $(BIN)demo_tests-$(BUILD)$(EXE) \
 
 w:
 	$(MAKE) all OS=windows ARCH=x86
+m:
+	$(MAKE) all OS=darwin ARCH=x86
 l: l32 l64
 l32:
 	$(MAKE) all OS=linux ARCH=x86
