java: added class RaceDetectorApi, an analog of DynamicAnnotations in C++
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1778 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/jtsan/Makefile
+++ b/jtsan/Makefile
@@ -3,8 +3,8 @@ MTRAT=mtrat
 TESTS=
 
 # Build the unittests.
-ThreadSanitizerTest.class: ThreadSanitizerTest.java
-	javac ThreadSanitizerTest.java
+ThreadSanitizerTest.class: ThreadSanitizerTest.java RaceDetectorApi.java
+	javac $^
 
 # Run the unittests natively.
 run: ThreadSanitizerTest.class
