A huge update to buildmaster configs. Some highlights: - Separate builders for valgrind ans tsan (for now on linux only). - Tests are run on self-contained binaries. - Vista and WinXP bots.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1809 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -13,7 +13,9 @@ c['slaves'] = [BuildSlave('bot1name', 'bot1pazzwd'),
                BuildSlave('bot4name', 'bot4pazzwd'),
                BuildSlave('bot5name', 'bot5pazzwd'),
                BuildSlave('bot6name', 'bot6pazzwd'),
-               BuildSlave('bot7name', 'bot7pazzwd')]
+               BuildSlave('bot7name', 'bot7pazzwd'),
+               BuildSlave('bot8name', 'bot8pazzwd'),
+               BuildSlave('bot9name', 'bot9pazzwd')]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave('bot1name', 'bot1passwd', max_builds=2)]
@@ -51,19 +53,21 @@ import builder_windows
 import builder_linux_pin
 import builder_mac
 import builder_experimental
+import builder_valgrind
 import builder_linux_build
 
 c['builders'] = []
 
-for module in [builder_linux,
+for module in [builder_valgrind,
+               builder_linux_build,
                builder_linux_small,
-               builder_windows,
+               builder_linux,
                builder_linux_pin,
+               builder_windows,
                builder_mac,
-               builder_experimental,
-               builder_linux_build]:
+               builder_experimental]:
   reload(module)
-  c['builders'].append(module.generate(settings))
+  c['builders'].extend(module.generate(settings))
 
 
 ####### SCHEDULERS
@@ -71,25 +75,30 @@ for module in [builder_linux,
 from buildbot.scheduler import Scheduler
 from buildbot.scheduler import Dependent
 
-commonBuilderNames = ['buildbot-linux',
-                'buildbot-linux-small',
-                'buildbot-windows',
-                'buildbot-linux-pin',
-                'buildbot-mac']
+commonBuilderNames = ['buildbot-winxp',
+                      'buildbot-vista',
+                      'buildbot-mac']
 
 sched_common = Scheduler(name='common', branch=None,
                          treeStableTimer=10,
                          builderNames=commonBuilderNames)
-sched_build = Scheduler(name='build', branch=None,
+sched_valgrind = Scheduler(name='valgrind', branch=None,
                         treeStableTimer=10,
+                        builderNames=['buildbot-valgrind'])
+sched_build = Dependent(name='build',
+                        upstream=sched_valgrind,
                         builderNames=['buildbot-linux-build'])
-sched_experimental = Dependent(name='experimental',
-                               upstream=sched_build,
-                               builderNames=['buildbot-experimental'])
+sched_tests = Dependent(name='tests',
+                        upstream=sched_build,
+                        builderNames=['buildbot-experimental',
+                                      'buildbot-linux',
+                                      'buildbot-linux-small',
+                                      'buildbot-linux-pin'])
 
 c['schedulers'] = [sched_common,
+                   sched_valgrind,
                    sched_build,
-                   sched_experimental]
+                   sched_tests]
 
 ####### STATUS TARGETS
 
