use -Wno-deprecated to avoid warnings on Ubuntu 9.10
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1835 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -18,7 +18,7 @@ CWARN=-Wall -Wmissing-prototypes -Wshadow -Wpointer-arith -Wstrict-prototypes \
       -Wdeclaration-after-statement
 CFLAGS=-g $(COPT) $(CWARN) -fno-strict-aliasing -fno-stack-protector -fpic
 CXXOPT=-O2
-CXXFLAGS=$(CXXOPT) -g -Wall -fno-exceptions # -Wvla
+CXXFLAGS=$(CXXOPT) -g -Wall  -Wno-deprecated -fno-exceptions # -Wvla
 LDFLAGS=
 
 VG_CXXFLAGS=-fno-rtti -fno-stack-protector
