A large update to the buildbot configuration.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1868 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/Makefile
+++ b/buildbot/Makefile
@@ -8,11 +8,39 @@
 
 # Note that a relative PYTHONPATH entry is relative to the current directory.
 
+# On the Mac, the buildbot is started via the launchd mechanism as a
+# LaunchAgent to give the slave a proper Mac UI environment for tests.  In
+# order for this to work, the plist must be present and loaded by launchd, and
+# the user must be logged in to the UI.  The plist is loaded by launchd at user
+# login (and the job may have been initially started at that time too).  Our
+# Mac build slaves are all set up this way, and have auto-login enabled, so
+# "make start" should just work and do the right thing.
+#
+# When using launchd to start the job, it also needs to be used to stop the
+# job.  Otherwise, launchd might try to restart the job when stopped manually
+# by SIGTERM.  Using SIGHUP for reconfig is safe with launchd.
+#
+# Because it's possible to have more than one slave on a machine (for testing),
+# this tests to make sure that the slave is in the known slave location,
+# /b/slave, which is what the LaunchAgent operates on.
+USE_LAUNCHD := \
+  $(shell [ -f ~/Library/LaunchAgents/org.chromium.buildbot.slave.plist ] && \
+          [ "$$(pwd -P)" = "/b/slave" ] && \
+          echo 1)
+
 start:
+ifneq ($(USE_LAUNCHD),1)
 	python run_master.py --no_save -y buildbot.tac
+else
+	launchctl start org.chromium.buildbot.slave
+endif
 
 stop:
+ifneq ($(USE_LAUNCHD),1)
 	if `test -f twistd.pid`; then kill `cat twistd.pid`; fi;
+else
+	launchctl stop org.chromium.buildbot.slave
+endif
 
 reconfig:
 	kill -HUP `cat twistd.pid`
