--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -105,7 +105,8 @@ c['schedulers'] = [sched_common,
 c['status'] = []
 
 from buildbot.status import html
-c['status'].append(html.WebStatus(http_port=8010,allowForce=True))
+c['status'].append(html.WebStatus(http_port=8010,allowForce=False))
+c['status'].append(html.WebStatus(http_port=8011,allowForce=True))
 
 # from buildbot.status import mail
 # c['status'].append(mail.MailNotifier(fromaddr='buildbot@localhost',
