Reduce buildmaster svn polling interval to 1 minute.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1873 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -34,7 +34,7 @@ settings = {
 from buildbot.changes.svnpoller import SVNPoller
 svn_poller = SVNPoller(
                    svnurl=settings['svnurl'],
-                   pollinterval=10*60, # seconds
+                   pollinterval=60, # seconds
                    histmax=10,
                    svnbin='/usr/bin/svn')
 c['sources'] = [ svn_poller ]
