use ./mk-self-contained-valgrind.sh in Makefile
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1884 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -174,7 +174,7 @@ install:
 	@echo The 'install' target is deprecated. 
 
 self-contained:
-	../tsan_binary/mk-self-contained-valgrind.sh $(VALGRIND_INST_ROOT)  tsan $(OUTDIR)/tsan-$(OS)-self-contained.sh
+	./mk-self-contained-valgrind.sh $(VALGRIND_INST_ROOT)  tsan $(OUTDIR)/tsan-$(OS)-self-contained.sh
 self-contained-stripped:
 	strip $(OUTDIR)/tsan-*$(OS)
 	$(MAKE) self-contained
