Add a periodic scheduler to the buildbot.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1935 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -74,10 +74,15 @@ for module in [builder_valgrind,
 
 from buildbot.scheduler import Scheduler
 from buildbot.scheduler import Dependent
+from buildbot.scheduler import Periodic
 
 commonBuilderNames = ['buildbot-winxp',
                       'buildbot-vista',
                       'buildbot-mac']
+dependentBuilderNames = ['buildbot-experimental',
+                         'buildbot-linux',
+                         'buildbot-linux-small',
+                         'buildbot-linux-pin']
 
 sched_common = Scheduler(name='common', branch=None,
                          treeStableTimer=10,
@@ -90,15 +95,16 @@ sched_build = Dependent(name='build',
                         builderNames=['buildbot-linux-build'])
 sched_tests = Dependent(name='tests',
                         upstream=sched_build,
-                        builderNames=['buildbot-experimental',
-                                      'buildbot-linux',
-                                      'buildbot-linux-small',
-                                      'buildbot-linux-pin'])
+                        builderNames=dependentBuilderNames)
+sched_periodic = Periodic(name='periodic',
+                          builderNames=commonBuilderNames + dependentBuilderNames,
+                          periodicBuildTimer=60*60) # 1 hour
 
 c['schedulers'] = [sched_common,
                    sched_valgrind,
                    sched_build,
-                   sched_tests]
+                   sched_tests,
+                   sched_periodic]
 
 ####### STATUS TARGETS
 
