move LiteRace to a header file to enable inlining
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2039 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -231,7 +231,8 @@ $(OUTDIR):
 	mkdir -p $(OUTDIR)
 
 TS_HEADERS=thread_sanitizer.h ts_util.h suppressions.h ts_replace.h ts_heap_info.h \
-	   ts_simple_cache.h ts_stats.h ts_lock.h ts_events.h ts_trace_info.h
+	   ts_simple_cache.h ts_stats.h ts_lock.h ts_events.h ts_trace_info.h \
+	   ts_literace.h
 ifeq ($(DEBUG), 0)
 # in optimized build, we include thread_sanitizer.cc into other files.
 $(VGP)ts_valgrind.o: thread_sanitizer.cc
