--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -55,6 +55,8 @@ import builder_mac
 import builder_experimental
 import builder_valgrind
 import builder_linux_build
+import builder_windows_build
+import builder_wine
 
 c['builders'] = []
 
@@ -65,7 +67,9 @@ for module in [builder_valgrind,
                builder_linux_pin,
                builder_windows,
                builder_mac,
-               builder_experimental]:
+               builder_experimental,
+               builder_windows_build,
+               builder_wine]:
   reload(module)
   c['builders'].extend(module.generate(settings))
 
@@ -96,6 +100,14 @@ sched_build = Dependent(name='build',
 sched_tests = Dependent(name='tests',
                         upstream=sched_build,
                         builderNames=dependentBuilderNames)
+# Wine needs both linux-build (for tsan) and windows_build (for win32 unittests), but buildbot does not support multiple dependencies.
+# Therefore, we make wine depend on windows_build, which, in turn, depends on linux-build. This should not slow down the build much.
+sched_windows_build = Dependent(name='windows_build',
+                        upstream=sched_build,
+                        builderNames=['buildbot-windows-build'])
+sched_wine = Dependent(name='wine',
+                       upstream=sched_windows_build,
+                       builderNames=['buildbot-wine'])
 sched_periodic = Periodic(name='periodic',
                           builderNames=commonBuilderNames + dependentBuilderNames,
                           periodicBuildTimer=60*60) # 1 hour
@@ -104,6 +116,8 @@ c['schedulers'] = [sched_common,
                    sched_valgrind,
                    sched_build,
                    sched_tests,
+                   sched_windows_build,
+                   sched_wine,
                    sched_periodic]
 
 ####### STATUS TARGETS
