--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -35,7 +35,7 @@ include ../common.mk
 
 OUTDIR=bin
 VALGRIND_ROOT=../third_party/valgrind
-VALGRIND_INST_ROOT=../tsan_inst
+VALGRIND_INST_ROOT=$(VALGRIND_ROOT)/inst
 STLPORT_ROOT=../third_party/stlport
 GTEST_ROOT=../third_party/googletest
 OFFLINE=1
