Add Wine builder to Periodic scheduler.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2100 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -87,6 +87,7 @@ dependentBuilderNames = ['buildbot-experimental',
                          'buildbot-linux',
                          'buildbot-linux-small',
                          'buildbot-linux-pin']
+periodicBuilderNames = commonBuilderNames + dependentBuilderNames + ['buildbot-wine']
 
 sched_common = Scheduler(name='common', branch=None,
                          treeStableTimer=10,
@@ -109,7 +110,7 @@ sched_wine = Dependent(name='wine',
                        upstream=sched_windows_build,
                        builderNames=['buildbot-wine'])
 sched_periodic = Periodic(name='periodic',
-                          builderNames=commonBuilderNames + dependentBuilderNames,
+                          builderNames=periodicBuilderNames,
                           periodicBuildTimer=60*60) # 1 hour
 
 c['schedulers'] = [sched_common,
