--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -21,11 +21,11 @@ BIN=bin/
 ifeq ($(OS), linux)
   OS_CXXFLAGS=-Wall -Werror -Wno-sign-compare -Wshadow -Wno-unused-function
   OS_CFLAGS=-Wall -Werror -Wno-sign-compare -Wshadow -Wno-unused-function -std=c89
-  LIBS=-lpthread
+  LIBS=-lpthread -lrt
 else ifeq ($(OS), darwin)
   OS_CXXFLAGS=-Wall -Werror -Wno-sign-compare -Wshadow -Wno-unused-function
   OS_CFLAGS=-Wall -Werror -Wno-sign-compare -Wshadow -Wno-unused-function -std=c89
-  LIBS=-lpthread
+  LIBS=-lpthread -lrt
 else ifeq ($(OS), windows)
   OS_CXXFLAGS=/EHs- /EHa- /wd4530   /D_CRT_SECURE_NO_DEPRECATE /D_SECURE_SCL=0 /nologo /Gy /D "WIN32"
   OS_CFLAGS=/EHs- /EHa- /wd4530   /D_CRT_SECURE_NO_DEPRECATE /D_SECURE_SCL=0 /nologo /Gy /D "WIN32"
