Remove the -lrt flag (unnecessary on Mac OS)
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2142 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -25,7 +25,7 @@ ifeq ($(OS), linux)
 else ifeq ($(OS), darwin)
   OS_CXXFLAGS=-Wall -Werror -Wno-sign-compare -Wshadow -Wno-unused-function
   OS_CFLAGS=-Wall -Werror -Wno-sign-compare -Wshadow -Wno-unused-function -std=c89
-  LIBS=-lpthread -lrt
+  LIBS=-lpthread
 else ifeq ($(OS), windows)
   OS_CXXFLAGS=/EHs- /EHa- /wd4530   /D_CRT_SECURE_NO_DEPRECATE /D_SECURE_SCL=0 /nologo /Gy /D "WIN32"
   OS_CFLAGS=/EHs- /EHa- /wd4530   /D_CRT_SECURE_NO_DEPRECATE /D_SECURE_SCL=0 /nologo /Gy /D "WIN32"
