--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -209,7 +209,7 @@ $(VGP)ts_valgrind.o: thread_sanitizer.cc
 $(PINP)ts_pin.$(OBJ):  thread_sanitizer.cc
 $(P)ts_offline.$(OBJ): thread_sanitizer.cc
 endif
-TS_VG_HEADERS=ts_valgrind.h ts_valgrind_client_requests.h ts_wrap_and_ignore.h
+TS_VG_HEADERS=ts_valgrind.h ts_valgrind_client_requests.h
 
 TS_VG_OBJECTS=$(VGP)thread_sanitizer.o $(VGP)ts_valgrind.o $(VGP)ts_valgrind_libc.o $(VGP)ts_util.o $(VGP)suppressions.o
 TS_PIN_OBJECTS=$(PINP)ts_pin.$(OBJ) $(PINP)ts_util.$(OBJ) $(PINP)thread_sanitizer.$(OBJ) $(PINP)suppressions.$(OBJ) $(PINP)ts_race_verifier.$(OBJ)
