Fix compilation of racecheck_unittest on Snow Leopard (Darwin 10.*)
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2199 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,7 +1,11 @@
 SVN_ROOT=..
 include ../common.mk
 
+ifeq ($(OS), darwin)
+DEFINES=-DOS_$(OS) -DARCH_$(ARCH) -DOS_$(DARWIN_VERSION)
+else
 DEFINES=-DOS_$(OS) -DARCH_$(ARCH)
+endif
 
 CFLAGS+=$(OPTFLAGS) $(ARCHFLAGS) $(OS_CFLAGS) $(DEFINES) $(EXTRA_CFLAGS)
 CXXFLAGS+=$(OPTFLAGS) $(ARCHFLAGS) $(OS_CXXFLAGS) $(DEFINES) $(EXTRA_CXXFLAGS)
